--- a/landscapist/build.gradle
+++ b/landscapist/build.gradle
@@ -14,6 +14,10 @@
  * limitations under the License.
  */
 
+import com.github.skydoves.landscapist.Configuration
+import com.github.skydoves.landscapist.Dependencies
+import com.github.skydoves.landscapist.Versions
+
 plugins {
   id 'com.android.library'
   id 'kotlin-android'
@@ -21,12 +25,20 @@ plugins {
   id 'binary-compatibility-validator'
 }
 
+ext {
+  PUBLISH_GROUP_ID = Configuration.artifactGroup
+  PUBLISH_ARTIFACT_ID = 'landscapist'
+  PUBLISH_VERSION = rootVersionName
+}
+
+apply from: "${rootDir}/scripts/publish-module.gradle"
+
 android {
-  compileSdkVersion versions.compileSdk
+  compileSdkVersion Configuration.compileSdk
 
   defaultConfig {
-    minSdkVersion versions.minSdk
-    targetSdkVersion versions.compileSdk
+    minSdkVersion Configuration.minSdk
+    targetSdkVersion Configuration.targetSdk
   }
 
   compileOptions {
@@ -35,7 +47,7 @@ android {
   }
 
   composeOptions {
-    kotlinCompilerExtensionVersion versions.composeVersion
+    kotlinCompilerExtensionVersion Versions.COMPOSE
   }
 
   buildFeatures {
@@ -49,12 +61,11 @@ tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
 }
 
 dependencies {
-  implementation "androidx.core:core-ktx:$versions.coreKtxVersion"
-  implementation "androidx.compose.ui:ui:$versions.composeVersion"
-  implementation "androidx.compose.runtime:runtime:$versions.composeVersion"
-  implementation "androidx.compose.foundation:foundation:$versions.composeVersion"
-  implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$versions.coroutinesVersion"
-  api "androidx.palette:palette-ktx:$versions.paletteVersion"
+  implementation Dependencies.coreKtx
+  implementation Dependencies.composeUI
+  implementation Dependencies.composeRuntime
+  implementation Dependencies.composeFoundation
+  implementation Dependencies.coroutines
+  api Dependencies.palette
 }
 
-apply plugin: "com.vanniktech.maven.publish"
