--- a/gradle.properties
+++ b/gradle.properties
@@ -1,47 +1,23 @@
-#
-# Copyright 2020 skydoves (Jaewoong Eum)
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-# http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-#
-
-# Jvm environments
-org.gradle.jvmargs=-Xmx4g
-
-# AndroidX
+# Project-wide Gradle settings.
+# IDE (e.g. Android Studio) users:
+# Gradle settings configured through the IDE *will override*
+# any settings specified in this file.
+# For more details on how to configure your build environment visit
+# http://www.gradle.org/docs/current/userguide/build_environment.html
+# Specifies the JVM arguments used for the daemon process.
+# The setting is particularly useful for tweaking memory settings.
+org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
+# When configured, Gradle will run in incubating parallel mode.
+# This option should only be used with decoupled projects. More details, visit
+# http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
+# org.gradle.parallel=true
+# AndroidX package structure to make it clearer which packages are bundled with the
+# Android operating system, and which are packaged with your app"s APK
+# https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
-
-# Required to publish to Nexus
-systemProp.org.gradle.internal.publish.checksums.insecure=true
-
-# Increase timeout when pushing to Sonatype
-systemProp.org.gradle.internal.http.connectionTimeout=120000
-systemProp.org.gradle.internal.http.socketTimeout=120000
-
-# Maven
-GROUP=com.github.skydoves
-
-VERSION_NAME=1.5.1-SNAPSHOT
-
-POM_URL=https://github.com/skydoves/landscapist/
-POM_SCM_URL=https://github.com/skydoves/landscapist/
-POM_SCM_CONNECTION=scm:git:git://github.com/skydoves/landscapist.git
-POM_SCM_DEV_CONNECTION=scm:git:git://github.com/skydoves/landscapist.git
-
-POM_LICENCE_NAME=The Apache Software License, Version 2.0
-POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
-POM_LICENCE_DIST=repo
-
-POM_DEVELOPER_ID=skydoves
-POM_DEVELOPER_NAME=Jaewoong Eum
-POM_DEVELOPER_URL=https://github.com/skydoves/
-
+# Kotlin code style for this project: "official" or "obsolete":
+kotlin.code.style=official
+# Enables namespacing of each library's R class so that its R class includes only the
+# resources declared in the library itself and none from the library's dependencies,
+# thereby reducing the size of the R class for that library
+android.nonTransitiveRClass=true
