Update Compose compiler to 1.2.0 and Kotlin to 1.7.0

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,7 +51,7 @@ android {
   }
 
   composeOptions {
-    kotlinCompilerExtensionVersion Versions.COMPOSE
+    kotlinCompilerExtensionVersion Versions.COMPOSE_COMPILER
   }
 
   buildFeatures {
