--- a/fresco/build.gradle
+++ b/fresco/build.gradle
@@ -48,7 +48,7 @@ android {
   }
 
   composeOptions {
-    kotlinCompilerExtensionVersion Versions.COMPOSE
+    kotlinCompilerExtensionVersion Versions.COMPOSE_COMPILER
   }
 
   buildFeatures {
