--- a/landscapist/build.gradle
+++ b/landscapist/build.gradle
@@ -47,7 +47,7 @@ android {
   }
 
   composeOptions {
-    kotlinCompilerExtensionVersion Versions.COMPOSE
+    kotlinCompilerExtensionVersion Versions.COMPOSE_COMPILER
   }
 
   buildFeatures {
