--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ buildscript {
     classpath Dependencies.dokka
     classpath Dependencies.kotlinBinaryValidator
     classpath Dependencies.hiltPlugin
+      classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.0'
   }
 }
 
