--- a/settings.gradle
+++ b/settings.gradle
@@ -6,3 +6,4 @@ include ':glide'
 include ':fresco'
 include ':fresco-websupport'
 include ':benchmark-landscapist-app'
+include ':benchmark-landscapist'
