--- a/spotless.gradle
+++ b/spotless.gradle
@@ -3,8 +3,9 @@ apply plugin: "com.diffplug.spotless"
 spotless {
   kotlin {
     target "**/*.kt"
-    ktlint().userData(['indent_size': '2', 'continuation_indent_size': '2'])
-    licenseHeaderFile '../spotless.license.kt'
+    targetExclude "**/build/**/*.kt"
+    ktlint().setUseExperimental(true).editorConfigOverride(['indent_size': '2', 'continuation_indent_size': '2'])
+    licenseHeaderFile "$rootDir/spotless.license.kt"
     trimTrailingWhitespace()
     endWithNewline()
   }
