Migrate gradle files to KTS formats

--- a/benchmark-landscapist/build.gradle
+++ b/benchmark-landscapist/build.gradle
@@ -7,7 +7,7 @@ plugins {
 }
 
 android {
-  compileSdk 32
+  compileSdk Configuration.compileSdk
   compileOptions {
     sourceCompatibility = JavaVersion.VERSION_1_8
     targetCompatibility = JavaVersion.VERSION_1_8
