Implement BaselineProfiles composables

--- a/benchmark-landscapist-app/src/main/AndroidManifest.xml
+++ b/benchmark-landscapist-app/src/main/AndroidManifest.xml
@@ -15,29 +15,32 @@
      limitations under the License.
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.skydoves.benchmark.landscapist.app">
+  xmlns:tools="http://schemas.android.com/tools"
+  package="com.skydoves.benchmark.landscapist.app">
 
-    <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.LandscapistDemo">
-        <profileable
-            android:shell="true"
-            tools:targetApi="q" />
+  <uses-permission android:name="android.permission.INTERNET" />
 
-        <activity
-            android:name=".MainActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+  <application
+    android:name=".App"
+    android:allowBackup="true"
+    android:icon="@mipmap/ic_launcher"
+    android:label="@string/app_name"
+    android:roundIcon="@mipmap/ic_launcher_round"
+    android:supportsRtl="true"
+    android:theme="@style/Theme.LandscapistDemo">
+    <profileable
+      android:shell="true"
+      tools:targetApi="q" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-    </application>
+    <activity
+      android:name=".MainActivity"
+      android:exported="true">
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN" />
+
+        <category android:name="android.intent.category.LAUNCHER" />
+      </intent-filter>
+    </activity>
+  </application>
 
 </manifest>
