--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,7 +15,7 @@ androidxCore = "1.8.0"
 androidxTest = "1.4.0"
 androidxJunit = "1.1.3"
 androidxMacroBenchmark = "1.1.0"
-androidxProfileinstaller = "1.2.0-rc01"
+androidxProfileinstaller = "1.2.0"
 androidxUiAutomator = "2.2.0"
 glide = "4.13.2"
 fresco = "2.6.0"
