--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,7 +8,7 @@ kotlinBinaryCompatibility = "0.11.1"
 androidGradlePlugin = "7.3.0"
 androidxActivity = "1.4.0"
 androidxMaterial = "1.6.0"
-androidxCompose = "1.3.0-rc01"
+androidxCompose = "1.3.0"
 androidxComposeCompiler = "1.3.2"
 androidxComposeConstraintLayout = "1.0.0"
 androidxCore = "1.8.0"
