--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,9 +14,9 @@ androidxComposeConstraintLayout = "1.0.0"
 androidxCore = "1.8.0"
 androidxTest = "1.4.0"
 androidxJunit = "1.1.3"
-androidxMacroBenchmark = "1.1.0"
+androidxMacroBenchmark = "1.2.0-alpha09"
 androidxProfileinstaller = "1.2.0"
-androidxUiAutomator = "2.2.0"
+androidxUiAutomator = "2.3.0-alpha02"
 glide = "4.14.2"
 fresco = "2.6.0"
 coil = "2.2.1"
