--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,8 +14,8 @@ androidxComposeConstraintLayout = "1.0.0"
 androidxCore = "1.8.0"
 androidxTest = "1.4.0"
 androidxJunit = "1.1.3"
-androidxMacroBenchmark = "1.2.0-alpha09"
-androidxProfileinstaller = "1.2.2"
+androidxMacroBenchmark = "1.2.0-alpha11"
+androidxProfileinstaller = "1.3.0-rc01"
 androidxUiAutomator = "2.3.0-alpha02"
 glide = "4.15.1"
 fresco = "2.6.0"
