--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,14 +8,14 @@ kotlinBinaryCompatibility = "0.13.0"
 androidGradlePlugin = "7.3.1"
 androidxActivity = "1.4.0"
 androidxMaterial = "1.6.0"
-androidxComposeBom = "2023.01.00"
+androidxComposeBom = "2023.03.00"
 androidxComposeCompiler = "1.4.3"
 androidxComposeConstraintLayout = "1.0.0"
 androidxCore = "1.8.0"
 androidxTest = "1.4.0"
 androidxJunit = "1.1.3"
-androidxMacroBenchmark = "1.2.0-alpha11"
-androidxProfileinstaller = "1.3.0-rc01"
+androidxMacroBenchmark = "1.2.0-alpha12"
+androidxProfileinstaller = "1.3.0"
 androidxUiAutomator = "2.3.0-alpha02"
 glide = "4.15.1"
 fresco = "2.6.0"
