--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,11 +1,11 @@
 [versions]
 kotlin = "1.8.10"
 dokka = "1.7.20"
-jvmTarget = "1.8"
+jvmTarget = "17"
 nexusPlugin = "1.3.0"
 kotlinxCoroutines = "1.6.4"
 kotlinBinaryCompatibility = "0.13.0"
-androidGradlePlugin = "7.3.1"
+androidGradlePlugin = "8.0.0-rc01"
 androidxActivity = "1.4.0"
 androidxMaterial = "1.6.0"
 androidxComposeBom = "2023.03.00"
