--- a/benchmark-landscapist-app/src/main/AndroidManifest.xml
+++ b/benchmark-landscapist-app/src/main/AndroidManifest.xml
@@ -15,8 +15,7 @@
      limitations under the License.
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:tools="http://schemas.android.com/tools"
-  package="com.skydoves.benchmark.landscapist.app">
+  xmlns:tools="http://schemas.android.com/tools">
 
   <uses-permission android:name="android.permission.INTERNET" />
 
