Increase managed devices setupTimeoutMinutes to 20

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -60,4 +60,4 @@ jobs:
         run: chmod +x ./gradlew
 
       - name: Build with Gradle
-        run: ./gradlew build
+        run: ./gradlew build -Pandroid.experimental.testOptions.managedDevices.setupTimeoutMinutes=20
