--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -61,4 +61,4 @@ jobs:
         run: chmod +x ./gradlew
 
       - name: Build with Gradle
-        run: ./gradlew build -Pandroid.experimental.testOptions.managedDevices.setupTimeoutMinutes=20
+        run: ./gradlew build -Pandroid.testoptions.manageddevices.emulator.gpu="swiftshader_indirect" -Pandroid.experimental.testOptions.managedDevices.setupTimeoutMinutes=20 -Pandroid.testInstrumentationRunnerArguments.androidx.benchmark.enabledRules=BaselineProfile
