Add cleanning managed devices

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,10 +1,10 @@
 name: Android CI
 
 on:
- push:
-  branches: [ main ]
- pull_request:
-  branches: [ '*' ]
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ '*' ]
 
 jobs:
   lint:
@@ -60,5 +60,10 @@ jobs:
       - name: Make Gradle executable
         run: chmod +x ./gradlew
 
+      # Cleans managed device if previously settle and space currently is not available
+      - name: Clean Managed Devices
+        run: ./gradlew cleanManagedDevices --unused-only
+
+      # Build Android modules with managed devices options
       - name: Build with Gradle
         run: ./gradlew build -Pandroid.testoptions.manageddevices.emulator.gpu="swiftshader_indirect" -Pandroid.experimental.testOptions.managedDevices.setupTimeoutMinutes=20 -Pandroid.testInstrumentationRunnerArguments.androidx.benchmark.enabledRules=BaselineProfile
