--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,7 +8,8 @@ on:
 jobs:
   publish:
     name: Release build and publish
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
+    timeout-minutes: 55
     steps:
       - name: Check out code
         uses: actions/checkout@v3.1.0
