--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -7,6 +7,14 @@ on:
     branches: [ '*' ]
 
 jobs:
+
+  prerequisites:
+    name: Setup prerequisites
+    runs-on: ubuntu-latest
+    steps:
+      - name: Make Gradle executable
+        run: chmod +x ./gradlew
+
   lint:
     name: Spotless check
     runs-on: ubuntu-latest
@@ -36,8 +44,8 @@ jobs:
         run: ./gradlew apiCheck
 
   build:
-    runs-on: macos-latest
-    timeout-minutes: 55
+    name: Build and Tests
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3.1.0
 
@@ -57,13 +65,12 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-
 
-      - name: Make Gradle executable
-        run: chmod +x ./gradlew
-
-      # Cleans managed device if previously settle and space currently is not available
-      - name: Clean Managed Devices
-        run: ./gradlew cleanManagedDevices --unused-only
-
-      # Build Android modules with managed devices options
       - name: Build with Gradle
-        run: ./gradlew build -Pandroid.testoptions.manageddevices.emulator.gpu="swiftshader_indirect" -Pandroid.experimental.testOptions.managedDevices.setupTimeoutMinutes=20 -Pandroid.testInstrumentationRunnerArguments.androidx.benchmark.enabledRules=BaselineProfile
+        run: |
+          ./gradlew --scan --stacktrace \
+              assemble -x :benchmark-landscapist:pixel6api31Setup
+
+      - name: Run unit tests
+        run: |
+          ./gradlew --scan --stacktrace \
+              testDebugUnitTest
