--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -63,7 +63,7 @@ jobs:
       - name: Build with Gradle
         run: |
           ./gradlew --scan --stacktrace \
-              assemble -x :benchmark-landscapist:pixel6api31Setup
+              assemble -x :benchmark-landscapist:pixel6api31Setup -x :benchmark-landscapist:pixel6api31NonMinifiedReleaseAndroidTest
 
       - name: Run unit tests
         run: |
