--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,15 +1,15 @@
 [versions]
-kotlin = "1.8.10"
+kotlin = "1.8.20"
 dokka = "1.7.20"
 jvmTarget = "17"
 nexusPlugin = "1.3.0"
 kotlinxCoroutines = "1.6.4"
 kotlinBinaryCompatibility = "0.13.1"
-androidGradlePlugin = "8.0.0-rc01"
+androidGradlePlugin = "8.0.0"
 androidxActivity = "1.4.0"
 androidxMaterial = "1.6.0"
 androidxComposeBom = "2023.04.00"
-androidxComposeCompiler = "1.4.4"
+androidxComposeCompiler = "1.4.5"
 androidxComposeConstraintLayout = "1.0.0"
 androidxCore = "1.8.0"
 androidxTest = "1.4.0"
