--- a/scripts/publish-module.gradle
+++ b/scripts/publish-module.gradle
@@ -3,6 +3,7 @@ apply plugin: 'signing'
 apply plugin: 'org.jetbrains.dokka'
 
 task androidSourcesJar(type: Jar) {
+  dependsOn(':bundleReleaseAar')
   archiveClassifier.set('sources')
   if (project.plugins.findPlugin("com.android.library")) {
     from android.sourceSets.main.java.srcDirs
