--- a/scripts/publish-module.gradle
+++ b/scripts/publish-module.gradle
@@ -3,7 +3,6 @@ apply plugin: 'signing'
 apply plugin: 'org.jetbrains.dokka'
 
 task androidSourcesJar(type: Jar) {
-  dependsOn(':generateMetadataFileForReleasePublication')
   archiveClassifier.set('sources')
   if (project.plugins.findPlugin("com.android.library")) {
     from android.sourceSets.main.java.srcDirs
@@ -37,6 +36,8 @@ afterEvaluate {
   publishing {
     publications {
       release(MavenPublication) {
+        tasks.named("generateMetadataFileForReleasePublication").configure { dependsOn("androidSourcesJar") }
+        tasks.named("generateMetadataFileForReleasePublication").configure { dependsOn("javadocJar") }
         groupId PUBLISH_GROUP_ID
         artifactId PUBLISH_ARTIFACT_ID
         version PUBLISH_VERSION
