--- a/scripts/publish-module.gradle
+++ b/scripts/publish-module.gradle
@@ -2,7 +2,7 @@ apply plugin: 'maven-publish'
 apply plugin: 'signing'
 apply plugin: 'org.jetbrains.dokka'
 
-task androidSourcesJar(type: Jar) {
+tasks.register('androidSourcesJar', Jar) {
   archiveClassifier.set('sources')
   if (project.plugins.findPlugin("com.android.library")) {
     from android.sourceSets.main.java.srcDirs
@@ -47,7 +47,6 @@ afterEvaluate {
           from components.java
         }
 
-        artifact androidSourcesJar
         artifact javadocJar
 
         pom {
