Refactor maven publication for bom

--- a/scripts/publish-module.gradle
+++ b/scripts/publish-module.gradle
@@ -2,12 +2,12 @@ apply plugin: 'maven-publish'
 apply plugin: 'signing'
 apply plugin: 'org.jetbrains.dokka'
 
-tasks.register('androidSourcesJar', Jar) {
+task androidSourcesJar(type: Jar) {
   archiveClassifier.set('sources')
   if (project.plugins.findPlugin("com.android.library")) {
     from android.sourceSets.main.java.srcDirs
     from android.sourceSets.main.kotlin.srcDirs
-  } else {
+  } else if (!project.name.contains("bom")) {
     from sourceSets.main.java.srcDirs
     from sourceSets.main.kotlin.srcDirs
   }
@@ -43,10 +43,11 @@ afterEvaluate {
         version PUBLISH_VERSION
         if (project.plugins.findPlugin("com.android.library")) {
           from components.release
-        } else {
+        } else if (!project.name.contains("bom")) {
           from components.java
         }
 
+        artifact androidSourcesJar
         artifact javadocJar
 
         pom {
