Add artifiact restrictions for bom

--- a/scripts/publish-module.gradle
+++ b/scripts/publish-module.gradle
@@ -49,8 +49,10 @@ afterEvaluate {
           from components.java
         }
 
-        artifact androidSourcesJar
-        artifact javadocJar
+        if (!project.name.contains("bom")) {
+          artifact androidSourcesJar
+          artifact javadocJar
+        }
 
         pom {
           name = PUBLISH_ARTIFACT_ID
