--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,15 +1,15 @@
 [versions]
-kotlin = "1.8.10"
-dokka = "1.7.20"
+kotlin = "1.8.21"
+dokka = "1.8.10"
 jvmTarget = "17"
 nexusPlugin = "1.3.0"
-kotlinxCoroutines = "1.6.4"
+kotlinxCoroutines = "1.7.1"
 kotlinBinaryCompatibility = "0.13.1"
-androidGradlePlugin = "8.0.0-rc01"
+androidGradlePlugin = "8.0.0"
 androidxActivity = "1.4.0"
 androidxMaterial = "1.6.0"
 androidxComposeBom = "2023.05.01"
-androidxComposeCompiler = "1.4.4"
+androidxComposeCompiler = "1.4.7"
 androidxComposeConstraintLayout = "1.0.0"
 androidxCore = "1.8.0"
 androidxTest = "1.4.0"
