--- a/scripts/publish-module.gradle
+++ b/scripts/publish-module.gradle
@@ -2,7 +2,7 @@ apply plugin: 'maven-publish'
 apply plugin: 'signing'
 apply plugin: 'org.jetbrains.dokka'
 
-task androidSourcesJar(type: Jar) {
+tasks.register('androidSourcesJar', Jar) {
   archiveClassifier.set('sources')
   if (project.plugins.findPlugin("com.android.library")) {
     from android.sourceSets.main.java.srcDirs
@@ -36,13 +36,14 @@ afterEvaluate {
   publishing {
     publications {
       release(MavenPublication) {
+        tasks.named("generateMetadataFileForReleasePublication").configure { dependsOn("androidSourcesJar") }
         groupId PUBLISH_GROUP_ID
         artifactId PUBLISH_ARTIFACT_ID
         version PUBLISH_VERSION
         if (project.plugins.findPlugin("com.android.library")) {
           from components.release
         } else {
-          from components.java
+          artifact("$buildDir/libs/${project.getName()}-${version}.jar")
         }
 
         artifact androidSourcesJar
