--- a/scripts/publish-module.gradle
+++ b/scripts/publish-module.gradle
@@ -2,7 +2,7 @@ apply plugin: 'maven-publish'
 apply plugin: 'signing'
 apply plugin: 'org.jetbrains.dokka'
 
-tasks.register('androidSourcesJar', Jar) {
+task androidSourcesJar(type: Jar) {
   archiveClassifier.set('sources')
   if (project.plugins.findPlugin("com.android.library")) {
     from android.sourceSets.main.java.srcDirs
@@ -43,9 +43,10 @@ afterEvaluate {
         if (project.plugins.findPlugin("com.android.library")) {
           from components.release
         } else {
-          artifact("$buildDir/libs/${project.getName()}-${version}.jar")
+          from components.java
         }
 
+        artifact androidSourcesJar
         artifact javadocJar
 
         pom {
