Change to allVariants

--- a/scripts/publish-module.gradle
+++ b/scripts/publish-module.gradle
@@ -35,8 +35,7 @@ version = PUBLISH_VERSION
 afterEvaluate {
   publishing {
     publications {
-      release(MavenPublication) {
-        tasks.named("generateMetadataFileForReleasePublication").configure { dependsOn("androidSourcesJar") }
+      allVariants(MavenPublication) {
         groupId PUBLISH_GROUP_ID
         artifactId PUBLISH_ARTIFACT_ID
         version PUBLISH_VERSION
