Update release variants

--- a/scripts/publish-module.gradle
+++ b/scripts/publish-module.gradle
@@ -2,13 +2,11 @@ apply plugin: 'maven-publish'
 apply plugin: 'signing'
 apply plugin: 'org.jetbrains.dokka'
 
-task androidSourcesJar(type: Jar) {
+tasks.register('androidSourcesJar', Jar) {
   archiveClassifier.set('sources')
   if (project.plugins.findPlugin("com.android.library")) {
-    from android.sourceSets.main.java.srcDirs
     from android.sourceSets.main.kotlin.srcDirs
   } else {
-    from sourceSets.main.java.srcDirs
     from sourceSets.main.kotlin.srcDirs
   }
 }
@@ -35,7 +33,8 @@ version = PUBLISH_VERSION
 afterEvaluate {
   publishing {
     publications {
-      allVariants(MavenPublication) {
+      release(MavenPublication) {
+        tasks.named("generateMetadataFileForReleasePublication").configure { dependsOn("androidSourcesJar") }
         groupId PUBLISH_GROUP_ID
         artifactId PUBLISH_ARTIFACT_ID
         version PUBLISH_VERSION
@@ -45,7 +44,6 @@ afterEvaluate {
           from components.java
         }
 
-        artifact androidSourcesJar
         artifact javadocJar
 
         pom {
