--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,15 +5,15 @@ jvmTarget = "17"
 nexusPlugin = "1.3.0"
 kotlinxCoroutines = "1.7.1"
 kotlinBinaryCompatibility = "0.13.1"
-androidGradlePlugin = "8.0.0"
-androidxActivity = "1.4.0"
-androidxMaterial = "1.6.0"
+androidGradlePlugin = "8.0.2"
+androidxActivity = "1.7.2"
+androidxMaterial = "1.9.0"
 androidxComposeBom = "2023.05.01"
 androidxComposeCompiler = "1.4.7"
-androidxComposeConstraintLayout = "1.0.0"
-androidxCore = "1.8.0"
-androidxTest = "1.4.0"
-androidxJunit = "1.1.3"
+androidxComposeConstraintLayout = "1.0.1"
+androidxCore = "1.10.1"
+androidxTest = "1.5.2"
+androidxJunit = "1.1.5"
 androidxMacroBenchmark = "1.2.0-alpha13"
 androidxProfileinstaller = "1.3.1"
 androidxUiAutomator = "2.3.0-alpha02"
@@ -21,8 +21,9 @@ glide = "4.15.1"
 fresco = "2.6.0"
 coil = "2.2.2"
 palette = "1.0.0"
-hilt = "2.45"
-spotless = "6.17.0"
+hilt = "2.46.1"
+spotless = "6.19.0"
+desugar="2.0.3"
 
 [libraries]
 androidx-material = { group = "com.google.android.material", name = "material", version.ref = "androidxMaterial" }
@@ -60,6 +61,7 @@ fresco-drawable = { group = "com.facebook.fresco", name = "animated-drawable", v
 fresco-websupport = { group = "com.facebook.fresco", name = "webpsupport", version.ref = "fresco" }
 coil = { group = "io.coil-kt", name = "coil", version.ref = "coil" }
 coil-gif = { group = "io.coil-kt", name = "coil-gif", version.ref = "coil" }
+desugar = { group = "com.android.tools", name = "desugar_jdk_libs", version.ref = "desugar" }
 
 # Dependencies of the included build-logic
 android-gradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "androidGradlePlugin" }
